# library-demo

./: .env.dist  .env.testing  .env.testing.dist  .flake8  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3cfa7f626834_initial_migration.py  45c4e1ef1169_initial_migration_with_books.py  4fcf3776dce7_first_migration_table.py  76ef9f4429fe_first_migration.py  7f06df7ec2e7_alter_datetime_fields_table.py  b411876e0edd_add_media_table.py  d7840b30a163_first_migration.py
cli/: app_structure.py  main.py  seed.py
infrastructures/app/: Dockerfile  entrypoint.sh
infrastructures/docker/: docker-compose-linux.yaml.dist  docker-compose-mac.yaml.dist
infrastructures/elk/filebeat/: Dockerfile  entrypoint.sh  filebeat.yml
infrastructures/nginx/: Dockerfile
infrastructures/nginx/conf.d/: default.conf
infrastructures/postgresql/: postgresql.conf
infrastructures/postgresql/init-db/: refresh_collation.sql
infrastructures/prometheus/: prometheus.yml
public/: media
scripts/: format.sh  lint.sh
src/: config.py  database.py  logger.py  main.py  setup.py  templates.py
src/auth/: controller.py  dependencies.py  exceptions.py  schemas.py  service.py  utils.py
src/books/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/core/: RateLimit.py
src/core/dependencies/: rate_limit.py  redis.py
src/core/errors/: errors_handlers.py
src/core/middlewares/: __init__.py  middlewares.py  requests_count.py
src/core/schemas/: responses.py
src/faststream/: app.py  broker.py
src/faststream/subscribers/: users.py
src/media/: dependencies.py  models.py  router.py  schemas.py  service.py  storage.py
src/notifications/: send_email.py  utils.py
src/rbac/: controller.py  dependencies.py  exceptions.py  models.py  permissions.py  schemas.py  service.py
src/users/: dependencies.py  exceptions.py  models.py  schemas.py  service.py
src/utils/: pagination.py  send_email.py
storage/: book_data.json
templates/mail/: base.html
templates/mail/email-verify/: email-verified.html  verification-request.html
templates/mail/reset-password/: forgot-password.html  reset-password.html
tests/: conftest.py
tests/features/auth/: test_login.py  test_register.py
tests/features/authors/: test_create_author.py  test_force_delete_author.py  test_get_author.py  test_get_authors.py  test_restore_author.py  (+2 more)
tests/fixtures/: author.py  base.py  book.py  permission.py  role.py  user.py
(+15 files in other folders)
