[project]
name = "library"
version = "0.1.0"
package-mode=false
description = "demo-project by fastapi"
authors = [
    {name = "roman",email = "romaxa83@ukr.net"}
]
readme = "README.md"
requires-python = "3.13.0"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "typer (>=0.21.0,<0.22.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "redis (>=7.1.0,<8.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-env (>=1.2.0,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "faststream[rabbit] (>=0.6.5,<0.7.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "faker (>=39.0.0,<40.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["venv", ".venv", "__pycache__", "alembic"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", "alembic"]

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
env = ["ENVIRONMENT=testing"]
env_override_existing_values = 1
env_files = [".env.testing"]